--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.14",
     "@clerk/types": "^4.54.2",
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@supabase/supabase-js": "^2.49.4",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.49.7",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
@@ -41,6 +44,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
@@ -49,8 +53,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "reconnecting-websocket": "^4.4.0",
-    "tinybase": "^5.4.9"
+    "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
