--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "DailySort",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "dailysort",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,7 +12,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
