--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-ios-context-menu": "^2.5.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.0-alpha.12",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
