--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-ios-context-menu": "^2.5.1",
     "react-native-modal": "^14.0.0-rc.1",
