--- a/DailySort/tsconfig.json
+++ b/DailySort/tsconfig.json
@@ -3,15 +3,15 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
+    "./src/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
+
     "expo-env.d.ts"
   ]
 }
