--- a/DailySort/package.json
+++ b/DailySort/package.json
@@ -21,12 +21,14 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.4",
     "@supabase/supabase-js": "^2.50.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
@@ -48,6 +50,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "styled-components": "^6.1.19",
     "zeego": "^1.10.0"
   },
   "devDependencies": {
