--- a/DailySort/package.json
+++ b/DailySort/package.json
@@ -51,7 +51,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "styled-components": "^6.1.19",
-    "zeego": "^1.10.0"
+    "zeego": "^1.10.0",
+    "expo-notifications": "~0.31.3",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
